navber and banner slider added

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+/* navber start */
+@media (min-width: 320px) and (max-width: 480px) {
+  
+  
+    
+  }
+/* navber End */
